@@ -11,6 +11,9 @@ copyright_year   = 2010
 -bundle = @Basic
 -remove = MakeMaker
 
+[Prereqs / ConfigureRequires]
+ExtUtils::Depends = 0
+
 [=inc::MultidimensionalMakeMaker / MultidimensionalMakeMaker]
 
 [PkgVersion]
