@@ -3,16 +3,12 @@ use Moose;
 
 extends 'Dist::Zilla::Plugin::MakeMaker::Awesome';
 
-use ExtUtils::Depends;
-
-override _build_WriteMakefile_args => sub {
+override _build_WriteMakefile_dump => sub {
     my ($self) = @_;
-    my $pkg = ExtUtils::Depends->new('multidimensional', 'B::Hooks::OP::Check');
+    my $str = super();
 
-    return +{
-        %{super()},
-        $pkg->get_makefile_vars,
-    };
+    $str =~ s/^(\s*)(.*)\n\);$/$1$2,\n$1do{ require ExtUtils::Depends; ExtUtils::Depends->new('multidimensional', 'B::Hooks::OP::Check')->get_makefile_vars }\n);/m;
+    return $str;
 };
 
 __PACKAGE__->meta->make_immutable;
